Bug 436792 Incorrect RDF Data Source function prototypes following nsISupportsArray patch in bug 435290 (IsCommandEnabled, DoCommand). p=Siddharth Agarwal <sid1337@gmail.com>,r=me,sr=bienvenu